src/test/ui/derives/derives-span-Hash-enum-struct-variant.stderr
error[E0277]: the trait bound `Error: std::hash::Hash` is not satisfied
  --> $DIR/derives-span-Hash-enum-struct-variant.rs:13:6
   |
LL |      x: Error
   |      ^^^^^^^^ the trait `std::hash::Hash` is not implemented for `Error`
   | 
  ::: $SRC_DIR/libcore/hash/mod.rs:LL:COL
   |
LL |     fn hash<H: Hasher>(&self, state: &mut H);
   |             - required by this bound in `std::hash::Hash::hash`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
